// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when Heading called with Subtitle variation should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 24,
        "lineHeight": 28,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Subtitle
</Text>
`;

exports[`when Heading called with an alignment should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "right",
      },
      {
        "fontSize": 20,
        "lineHeight": 22,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Text Aligned Right
</Text>
`;

exports[`when Heading called with maxLines should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  numberOfLines={1}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 20,
        "lineHeight": 22,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Text Aligned Right
</Text>
`;

exports[`when Heading called with reverseTheme should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "rgba(255, 255, 255, 1)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 20,
        "lineHeight": 22,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Reverse Theme Heading
</Text>
`;

exports[`when Heading called with sub-heading variation and text-color should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.375}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-semibold",
      },
      {
        "color": "hsl(197, 15%, 43%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Sub-Heading
</Text>
`;

exports[`when Heading called with sub-heading variation should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.375}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-semibold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Sub-Heading
</Text>
`;

exports[`when Heading called with text as the only prop should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 20,
        "lineHeight": 22,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Default Heading
</Text>
`;

exports[`when Heading called with title variation should match snapshot 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.0625}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "jobberpro-xbd",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 32,
        "lineHeight": 36,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Title Heading
</Text>
`;

exports[`when Heading contains nested inline text renders nested Text within Heading 1`] = `
<Text
  accessibilityRole="header"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-bold",
      },
      {
        "color": "hsl(197, 90%, 12%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 20,
        "lineHeight": 22,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Heading before 
  <Text
    accessibilityRole="text"
    adjustsFontSizeToFit={false}
    allowFontScaling={true}
    collapsable={false}
    maxFontSizeMultiplier={3.125}
    selectable={true}
    selectionColor="hsl(86, 100%, 46%)"
    style={
      [
        {
          "fontFamily": "inter-semibold",
        },
        {
          "color": "hsl(198, 35%, 21%)",
        },
        {
          "textAlign": "left",
        },
        {
          "fontSize": 16,
          "lineHeight": 20,
        },
        {
          "letterSpacing": 0,
        },
      ]
    }
  >
    Inner
  </Text>
   after
</Text>
`;
